changes to the code
current monopoly code